--- a/index.css
+++ b/index.css
@@ -82,10 +82,14 @@ body {
 
 .about {
   color: black;
-  width: 350px;
+  width: 390px;
   position: absolute;
   top: 17%;
-  right: 7%;
+  right: 4%;
+}
+
+.about h1 {
+  margin-bottom: 0;
 }
 
 .about span {
@@ -98,10 +102,11 @@ body {
 
 .about h4 {
   font-size: 1.2rem;
+  margin-bottom: 0;
 }
 
 .about ul li {
-  margin-bottom: 10px;
+  margin-bottom: 8px;
   font-weight: 300;
 }
 
